conexion parcial error 404

--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,15 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
+# Node / React
+frontend/node_modules
+frontend/dist
+frontend/dist-ssr
+frontend/*.local
+frontend/.env
+# Python / Django
+backend/.env
+# General
 .vscode/*
 !.vscode/extensions.json
 .idea
